Fix a table-layout problem

--- a/src/styles/styles.less
+++ b/src/styles/styles.less
@@ -546,6 +546,13 @@ table td:first-child {
   padding-right: 0.5rem;
 }
 
+.table-draw table {
+  td:first-child,
+  td:last-child {
+    width: 0;
+  }
+}
+
 .slide-enter-active,
 .slide-leave-active {
   transition: all 0.4s ease;
